@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-05T16:28:46Z",
+  "timestamp" : "2022-06-06T08:25:10Z",
   "count_outdated" : 504,
   "uniques_outdated" : 284,
-  "count" : 620,
-  "uniques" : 320,
+  "count" : 621,
+  "uniques" : 321,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 13, 14 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
+    },
+    {
+      "timestamp": "2022-06-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
