@@ -1,5 +1,5 @@
 {
-  "count": 116,
+  "count": 117,
   "uniques": 21,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-06-05T00:00:00Z",
       "count": 14,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-06-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
